# NipaPlay-Reload

./: .fvmrc  .gitignore  README.md  build-arm64.sh  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml  main-backup.yml.disabled  main.yml  pr-validation.yml
CONTRIBUTING_GUIDE/: 00-Introduction.md  01-Environment-Setup.md  02-Project-Structure.md  03-How-To-Contribute.md  04-Coding-Style.md  05-Example-Add-A-New-Page.md  06-FAQ.md  08-Adding-a-New-Player-Kernel.md  09-Adding-a-New-Danmaku-Kernel.md  10-Platform-Specific-Development.md  11-Non-Coding-Contributions.md  12-Bounty-Board.md
Documentation/: index.md  installation.md  post-install.md  release-channels.md  server-integration.md  settings.md
android/: build.gradle  settings.gradle
android/app/: build.gradle
assets/: build_info.json
assets/web/: flutter_bootstrap.js  flutter_service_worker.js
docs/: nipa_kernel_notes.md
ios/: Podfile
lib/: fluent_ui_stub.dart  main.dart
linux/: my_application.cc
macos/: Podfile
ohos/: build-profile.json5
ohos_doc/: PLAYER_PORTING_GUIDE.md  README.md  README_EN.md
rust/: Cargo.toml
rust/flutter_bridge/: Cargo.toml
rust/flutter_bridge/src/: api.rs  frb_generated.rs
rust/nipaplay-next/: Cargo.toml
rust/nipaplay-next/src/: lib.rs
test/: subtitle_file_utils_test.dart
web-remote/: index.html  package-lock.json  package.json
windows/: nipaplay_installer.nsi
(+670 files in other folders)
